Fix styling and spacing

--- a/styles.css
+++ b/styles.css
@@ -82,13 +82,17 @@ ul {
   border: 2px solid rgba(3, 218, 197, 1);
 }
 
-.zone-header {
+.players-col, .ranks-col{
   background-color: rgba(51, 45, 45, 1);
+}
+
+.ranks-col {
+  padding-left: 0 !important;
 }
 
 .zone-container.players>div {
   background-color: rgba(148,89,246, 1);
-  margin: 20px 5px 15px 5px;
+  margin: 15px 0px 15px 0px;
   transition: opacity 0.4s ease-in-out 0s;
   cursor: grab;
 }
@@ -102,10 +106,11 @@ ul {
   justify-content: center;
   align-items: center;
   position: relative;
+  padding: 1px !important;
 }
 
 .zone-container.ranks>div {
-  background-color: rgba(255, 136, 0, 1);
+  background-color: rgba(3, 218, 197, 1);
   transition: opacity 0.4s ease-in-out 0s;
   cursor: grab;
   width: 100%;
@@ -144,7 +149,7 @@ ul {
 }
 
 #player-column {
-  min-height: 385px;
+  min-height: 470px;
 }
 
 .player {
@@ -155,5 +160,38 @@ ul {
 
   /* wrap text to new line */
   word-wrap: break-word;
-  display: block;
+  display: flex;
+  justify-content: space-between;
+}
+
+.rank {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  flex: 0.2;
+
+  font-weight: bold;
+  border-radius: 4px 0 0 4px;
+  background-color: rgb(64 80 97 / 85%);
+}
+
+.name {
+  display: flex;
+  padding-left: 10px;
+  align-items: center; /* Center vertically */
+
+  /* wrap text to new line */
+  word-wrap: break-word;
+  word-break: break-all;
+  display: flex;
+  justify-content: space-between;
+  flex: 0.8;
+
+  font-weight: bold;
+  border-radius: 0 4px 4px 0;
+  background-color: rgba(0,0,0,.3);
+}
+
+div.rank, div.name {
+    pointer-events: none;
 }
